--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 .logo{
-    display: flex;
-    position: fixed;
-    justify-content: center;
-    width: 20%;
-    margin: auto;
-    background-color: #ffffff;
-    padding-left: 38%;
-    padding-right: 50%;
-    margin-bottom: 20px;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  width: 10%;
+  margin: auto;
+  background-color: #ffffff;
+  padding-left: 45%;
+  padding-right: 50%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  top:0px;
 }
 
+/*home 이미지 전체*/
+.num1{
+    width: 100%;
+}
 
 .stb{
     /* 스크롤 버튼 스타일 */
@@ -40,23 +46,29 @@
     position: fixed;
     top: 0;
     right: 0;
-    margin: 20px;
+    margin: 25px;
 }
 
 
 .dropdown-content {
-    position: absolute;
+    position: absolute; /*메뉴버튼 포지션*/
     display: none;
     flex-direction: column;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 20px;
 }
 
+/*드롭다운 스타일*/
 .dropdown-content a {
     display: block;
   }
 
+.menu-list{ 
+    text-decoration: none;
+    margin : 30px;
+    font-size: 30px;
+}
 
+/*드롭다운 텍스트*/
 .show {
     display: block;
     width: 370px;
@@ -65,36 +77,30 @@
     color: rgb(0, 0, 0);
     transform: translateX(-90%);
     font-size: 20px;
-    padding: 20px;
-}
-
-/*home 이미지 전체*/
-.num1{
-    width: 100%;
-}
-.menu-list{
-    text-decoration: none;
-    margin : 30px;
-    font-size: 30px;
+    padding-left: 10px;
+    padding-top: 5px;
 }
 
 
- /*달력*/
+
+
+/* 달력 */
 .slider-container {
-    width: 780px;
-    overflow: hidden;
-    margin: 100px;
-  }
-  
-  .slider {
-    display: flex;
-    width: 300%; /* 이미지 개수에 따라 조정 */
-    transition: transform 0.5s ease;
-  }
-  
-  .slider img {
-    width: 33.333%; /* 이미지 개수에 따라 조정 */
-  }
+  width: 100%;
+  margin-top: 10%;
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  width: 1400%; /* 이미지 개수에 따라 조정 */
+  transition: transform 0.5s ease;
+}
+
+.slider img {
+  width: 7.1429%; /* 이미지 개수에 따라 조정 */
+}
+
   
 /* 인디케이터 */
 .indicator-container {
