--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .poster{
   width: 100%;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 /*home 이미지 전체*/
@@ -95,7 +95,7 @@
 /* 달력 */
 .slider-container {
   width: 100%;
-  margin-top: 10%;
+  margin-top: 30%;
   overflow: hidden;
 }
 
@@ -132,6 +132,8 @@
   
   .gif{
     position: fixed;
+    margin-top: 30px;
+    width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -45%);
