--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
 
 .menu-list{ 
     text-decoration: none;
-    margin: 20%;
+    margin : 30px;
     font-size: 30px;
 }
 
@@ -95,7 +95,7 @@
 /* 달력 */
 .slider-container {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 200px;
   overflow: hidden;
 }
 
@@ -132,8 +132,9 @@
   
   .gif{
     position: fixed;
+    margin-top: 50px;
     width: 100%;
-    top: 20%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -45%);
   }
