--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@
   width: 100%;
 }
 
+@media screen and (max-width: 768px) { /* 모바일 화면 크기에 따라 조정 */
+  .num1 {
+      width: 50%; /* 모바일에서는 이미지를 한 줄에 하나씩 배치 */
+  }
+}
 
 .stb{
     /* 스크롤 버튼 스타일 */
