--- a/style.css
+++ b/style.css
@@ -39,16 +39,6 @@
   width: 100%;
 }
 
-@media screen and (max-width: 768px) { /* 모바일 화면 크기에 따라 조정 */
-  .num-container {
-      flex-wrap: nowrap; /* 줄바꿈을 방지하여 가로 스크롤 생성 */
-  }
-
-  .num1 {
-      width: 50%; /* 모바일에서도 가로로 2개씩 배치 */
-  }
-}
-
 .stb{
     /* 스크롤 버튼 스타일 */
     #scrollBtn {
@@ -117,7 +107,7 @@
 }
 
 
-
+#info
 
 /* 달력 */
 .slider-container {
@@ -154,7 +144,7 @@
   }
   
   .indicator-dot.active {
-    background-color: black;
+    background-color: rgb(13, 15, 116);
   }
   
   .gif{
@@ -164,4 +154,12 @@
     top: 30%;
     left: 50%;
     transform: translate(-50%, -45%);
+  }
+
+
+
+  /*굿즈*/
+  .info3{
+    width: 100%;
+    margin-top: 60px;
   }
