--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@
 }
 
 .poster{
-  width: 100%;
+  width: 90%;
   margin-top: 30px;
+  padding: 30px;
 }
 
 /*home 이미지 전체*/
@@ -38,6 +39,11 @@
 
 .num-img {
   width: 100%;
+}
+
+.top-img{
+  width: 100%;
+  margin-top: 30px;
 }
 
 .bottom-img{
@@ -128,7 +134,6 @@
 /* 달력 */
 .slider-container {
   width: 100%;
-  margin-top: 60px;
   overflow: hidden;
 }
 
@@ -164,16 +169,27 @@
   }
   
   .gif{
-    position: fixed;
-    margin-top: 50px;
+    margin-top: 30px;
     width: 100%;
     top: 30%;
     left: 50%;
-    transform: translate(-50%, -45%);
   }
 
   /*굿즈*/
   .info3{
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  .info2{
+    width: 100%;
+    margin-top: 60px;
+  }
+  .info4{
+    width: 100%;
+    margin-top: 100px;
+  }
+  .info5{
     width: 100%;
     margin-top: 30px;
   }
