--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@
 
 .poster{
   width: 90%;
-  margin-top: 30px;
+  margin-top: 10px;
   padding: 30px;
+  justify-content: center;
 }
 
 /*home 이미지 전체*/
