--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 .poster{
   width: 90%;
   margin-top: 10px;
+  margin-left: -10px;
   padding: 30px;
   justify-content: center;
 }
@@ -49,6 +50,10 @@
 
 .bottom-img{
   width: 100%;
+}
+.img7{
+  width: 70%;
+  margin-left: 70px;
 }
   
 .stb{
@@ -182,6 +187,13 @@
     margin-top: 30px;
   }
 
+  .info1{
+    width: 100%;
+  }
+  .info1-name{
+    width: 100%;
+    margin-bottom: 30px;
+  }
   .info2{
     width: 100%;
     margin-top: 60px;
