--- a/style.css
+++ b/style.css
@@ -13,8 +13,11 @@
 }
 
 .poster{
-  width: 100%;
-  margin-top: 60px;
+  width: 90%;
+  margin-top: 10px;
+  margin-left: -10px;
+  padding: 30px;
+  justify-content: center;
 }
 
 /*home 이미지 전체*/
@@ -40,12 +43,16 @@
   width: 100%;
 }
 
+.top-img{
+  width: 100%;
+  margin-top: 30px;
+}
+
 .bottom-img{
   width: 100%;
 }
-
 .img7{
-  width: 50%;
+  width: 70%;
   margin-left: 50px;
 }
   
@@ -133,7 +140,6 @@
 /* 달력 */
 .slider-container {
   width: 100%;
-  margin-top: 60px;
   overflow: hidden;
 }
 
@@ -169,16 +175,39 @@
   }
   
   .gif{
-    position: fixed;
-    margin-top: 50px;
+    margin-top: 30px;
     width: 100%;
     top: 30%;
     left: 50%;
-    transform: translate(-50%, -45%);
   }
 
   /*굿즈*/
   .info3{
     width: 100%;
     margin-top: 30px;
+  }
+
+  .info1{
+    width: 100%;
+  }
+  .info1-name{
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .info2{
+    width: 100%;
+    margin-top: 60px;
+  }
+  .info4{
+    width: 100%;
+    margin-top: 100px;
+  }
+  .info5{
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  .credit{
+    width: 100%;
+    margin-top: 50px;
   }
